--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
         </ul>
       </div>
       <div class="card-action">
-        <span>Feb 2025 - April 2025 | Anamnagar, Kathmandu</span>
+        <span>Feb 2025 | Anamnagar, Kathmandu</span>
       </div>
     </div> 
 
@@ -486,16 +486,16 @@ such as login/sign up, view a product, add a product to cart, checkout the order
       </div>
 
       <!-- Experience 1 -->
-      <div class="card">
+      <!-- <div class="card">
         <div class="card-content">
           <div class="row">
             <div class="col s12 m2">
               <img alt="SyncAudio logo" src="/img/sync_audio_1.png" class="responsive-img center-block" />
 
-            </div>
+            </div> -->
 
             <!-- <div class="col s12 m10"> -->
-            <div class="col s12 m10">
+            <!-- <div class="col s12 m10">
               <p>
                 <span class="card-title"><a href="#" class="teal-text hoverline">Sync Audio Studio</a></span>
               </p>
@@ -519,7 +519,8 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           <span>July 2020 - Nov 2022</span>
         </div>
       </div>
-    </div>
+    </div> -->
+
     </section>
 
     <!-- Fourth Section: Projects -->
@@ -566,7 +567,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </div>   
 
           <!-- 2. JavaScript Project -->
-          <div class="col s12 m6 l4">
+          <!-- <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="JavaScript web app" src="img/pacman.jpg" style="height: 100%; width: 100%;" class="activator" />
@@ -575,19 +576,19 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 <span class="card-title activator teal-text hoverline">Pacman Web-App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Pacman a web-app game base on JavaScript.
+                  Pacman a web-app game base on JavaScript. -->
                   <!-- web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.-->
-                </p>
+                <!-- </p>
               </div>
               <div class="card-reveal">
                 <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, JavaScript</li>
+                  <li><b>Tools:</b> HTML, CSS, JavaScript</li> -->
                   <!-- <li>Users can view list and detail information for books and authors.</li>
                   <li>Admin users can create and manage models.</li>
                   <li>Librarians can renew reserved books.</li> -->
 
-                </ul>
+                <!-- </ul>
                 <div class="card-action">
                   <a aria-label="Visit " href="#" target="_blank" data-position="top"
                     data-tooltip="View Online"
@@ -600,7 +601,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- 3. BLE JAMMER -->
           <!-- <div class="col s12 m6 l4">
@@ -699,6 +700,9 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 </div>
                 <div class="col s4 m2">
                   <img alt="" src="img/javascript.png" class="responsive-img" />JavaScript
+                </div>
+                <div class="col s4 m2">
+                  <img alt="" src="img/new-php-logo.svg" class="responsive-img" />PHP
                 </div>
                 <div class="col s4 m2">
                   <img alt="" src="img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
