--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Us
         </div>
         <div class="role brown-text text-darken-2">E-commerce</div>
         <ul>
-          <li>Handeled Giftmart website with web optimised image and contents</li>
+          <li>Handled Giftmart website with web optimised image and contents</li>
           <!--<li>
             Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
 such as login/sign up, view a product, add a product to cart, checkout the order, etc.
