--- a/index.html
+++ b/index.html
@@ -520,12 +520,16 @@ such as login/sign up, view a product, add a product to cart, checkout the order
     </section>
 
     <!-- Fourth Section: Projects -->
+
+    <!-- Babu Metal Crafts-->
+     
+   
     <section id="projects" class="section scrollspy">
         <h3 class="page-title white-text teal">Projects</h3>
         <div class="container">
           <div class="row">
   
-            <!--1. JavaScript Project-->
+             <!--1. Hotel Himalaya -->
             <div class="col s12 m6 l4">
               <div class="card medium">
                 <div class="card-image waves-effect waves-block waves-light">
@@ -599,7 +603,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             </div>
           </div> -->
 
-          <!-- 3. BLE JAMMER -->
+          <!-- 2. BLE JAMMER -->
           <!-- <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -636,7 +640,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             </div>
           </div> -->
 
-          <!-- Blog Website Project -->
+          <!--2. Blog Website Project -->
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -666,6 +670,44 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404/Blog-Page"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!--4. Blog Website Project -->
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of web page" src="img/babu metal crafts_web.png"
+                style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+               <span class="card-title activator teal-text hoverline">Babu Metal Crafts<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  E-commerce website (Copper & Brass Products).
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+               <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                <span class="card-title teal-text"><small>Accomplishments</small>
+                  <!-- <i class="mdi-navigation-close right"></i> --></span>
+                <ul>
+                  <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt, PHP, WOrdpress</li>
+                  <li>Users can view products, buy products.</li>
+                  <li>Admin can Add, Delete, Update and contact users.</li>
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit Blog website" href="https://rujaltamrakar.com.np" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/rujal404/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
