--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                   <span class="card-title activator teal-text hoverline">Hotel Himalaya<i
                       class="mdi-navigation-more-vert right"></i></span>
                   <p>
-                    Hotel Himalaya e-commerce website based on html, css, bootstrap and javascript
+                    Hotel Himalaya a e-commerce website.
                   </p>
                 </div>
                 <div class="card-reveal">
@@ -699,8 +699,8 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                   <!-- <i class="mdi-navigation-close right"></i> --></span>
                 <ul>
                   <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt, PHP, WOrdpress</li>
-                  <li>Users can view products, buy products.</li>
-                  <li>Admin can Add, Delete, Update and contact users.</li>
+                  <li>Users can view products, contact seller.</li>
+                  <li>Admin can Add, Delete, Update resource and contact users.</li>
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit Blog website" href="https://rujaltamrakar.com.np" target="_blank" data-position="top"
