--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </ul>
         </div>
         <div class="card-action">
-          <span>July 2024 - December 2024</span>
+          <span>July 2024</span>
         </div>
       </div> 
 
