--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
   <link rel="stylesheet" href="/css/style.css" />
   <title>Portfolio</title>
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WRR8573F');</script>
+  <!-- End Google Tag Manager -->
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
   <script>
@@ -112,10 +120,16 @@
 }
 Us
    </script> -->
+
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRR8573F"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGZH8HT"
+    <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGZH8HT"
         height="0" width="0" style="display:none;visibility:hidden"></iframe>
-        </noscript>
+        </noscript> -->
 
         <!-- Navigation Menu-->
   <!-- Nav class 1 -->
@@ -698,12 +712,12 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                 <span class="card-title teal-text"><small>Accomplishments</small>
                   <!-- <i class="mdi-navigation-close right"></i> --></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt, PHP, WOrdpress</li>
+                  <li><b>Tools:</b> HTML, CSS, Bootstrap, JavaScrippt, PHP, Wordpress</li>
                   <li>Users can view products, contact seller.</li>
                   <li>Admin can Add, Delete, Update resource and contact users.</li>
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit Blog website" href="https://rujaltamrakar.com.np" target="_blank" data-position="top"
+                  <a aria-label="Visit website" href="https://pasal.thulo.eu.org" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
