--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
   <!-- Google Tag Manager -->
-  <script>
+  <!-- <script>
   (function(w,d,s,l,i){w[l]=w[l]||[];
     w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});
@@ -17,7 +17,7 @@
   j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })
   (window,document,'script','dataLayer','GTM-PGZH8HT');
-  </script>
+  </script> -->
   <!-- End Google Tag Manager -->
 
   <!-- Materialize - Compiled and minified CSS-->
