--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
   <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
   <!-- Google Site Verification for indexing -->
   <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
+  <meta name="keywords" content="Front-end developer, Web Content Specialist, CMS, Content Management System, E-commerce Specialist, Web Content Specialist,
+  Photoshop, SEO, E-commerce SEO, Front-end Design
+">
 </head>
 
 <body>
